crates/bitsum/tests/ui/fail/colliding_generated_names.rs
use bitsum::bitsum;

#[bitsum(u32)]
enum Instr {
    AB,
    A_B,
}

fn main() {}
